--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,7 @@ test.py
 test1.py
 media
 static/places
+where_to_go/collected_static
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
